# django_chat

./: .env  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  alembic.ini  app.py  config.py  docker-compose.yml  nginx.conf  pyproject.toml  readme.md
.github/workflows/: tests.yml
auth_app/: .env  Dockerfile  celery_app.py  docker-compose.yml  readme.md  requirements.txt
auth_app/auth_app/: asgi.py  settings.py  urls.py
auth_app/chat/: consumers.py  consumers_notification.py  middleware.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
auth_app/chat/migrations/: 0001_initial.py  0002_room_created_by_room_users_amount_alter_message_room.py  0003_room_joined_users.py  0004_message_reactions.py  0005_message_read_by.py
auth_app/templates/: base.html
auth_app/users/: admin.py  forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
chat-frontend/: .env  env.d.ts  package-lock.json  package.json  tsconfig.json
chat-frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  styles.css
docs/: postman_collection.json  swagger.yml
frontend/: Dockerfile  index.html  login.html  profile.html  signup.html
frontend/js/: main.js
helpers/: __init__.py  helpers.py
migrations/: env.py
migrations/versions/: 486e929fb819_initial_migration.py
models/: __init__.py  article.py  role.py  user.py
routes/: __init__.py  articles.py  auth.py  users.py
scripts/: create_user.py  populate_db.py
tests/: conftest.py  test_articles.py  test_auth.py  test_users.py
x_etc/: aws_deploy.txt  curl_commands.txt
(+42 files in other folders)
